# hello-python-311

./: .gitignore  README.md  pyproject.toml
hello_app/: __init__.py  __main__.py  hello.py
tests/: test_cli.py  test_hello.py
