[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-python-311"
version = "0.1.0"
description = "Simple hello world with pytest, ruff, and pylint (Python 3.11)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Reacteev", email = "contact@reacteev.com" }]
dependencies = []

# dev extras (install with: uv pip install -e ".[dev]")
[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
  "pylint>=3.2.0",
]

# Console script (python -m hello_app also works)
[project.scripts]
hello-app = "hello_app.__main__:main"

# ---- setuptools package discovery (flat layout) ----
[tool.setuptools.packages.find]
include = ["hello_app*"]
exclude = ["tests*"]

# ---------------- Tooling configs -------------------

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "PT"]
ignore = []

[tool.pylint.main]
py-version = "3.11"
jobs = 0
disable = ["C0114","C0115","C0116"]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.reports]
output-format = "colorized"
